# github-action-playground

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml  windows.yml
src/: main.cpp
